k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: frontend.local
      http:
        paths:
          - path: /rooms/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /reservations/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /token
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
