k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /rooms/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          - path: /reservations/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          - path: /token
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
